sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:10: error: not found: value e
      while (j>e && !plusPetitQue(j-ecart,v)) {
               ^